# zero-prompt-env

./: Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: app.py  zero_prompt_environment.py
tasks/: format_inference.py  intent_classification.py  multi_step_composition.py
